chore: simplify project name

--- a/sam/app/athena-workflow-api.yaml
+++ b/sam/app/athena-workflow-api.yaml
@@ -7,7 +7,7 @@ Parameters:
   AppName:
     Type: String
     Description: The name of the application.
-    Default: "sfn-api-powered-workflows"
+    Default: "sfn-api-workflows"
 
   Stage:
     Type: String
