--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache: true
       - run: go mod download
-      - run: go build -v .
+      - run: go build -v ./cmd/...
 
       - name: Run linters
         uses: golangci/golangci-lint-action@639cd343e1d3b897ff35927a75193d57cfcba299 # v3.6.0
